--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -14,7 +14,7 @@
                             <label for="cnpj" id="cnpj" class="font-weight-bold">Login</label>
                             <input class="form-control" type="text" name="cnpj" id="cnpj" placeholder="Digite seu CNPJ">
                             <div>
-                                <p id="info-cnpj">Seu CNPJ não será compartilhado</p>
+                                <p id="info-cnpj">Seu CNPJ não será compartilhado.</p>
                             </div>
                         </div>
 
