--- a/src/app/entrar/entrar.component.css
+++ b/src/app/entrar/entrar.component.css
@@ -1,5 +1,5 @@
 #img-bg{
-    background-image: url('https://i.imgur.com/zxsJpGQ.png');
+    background-image: url(../../assets/img/imagemEntrar.png);
 
     min-height: 950px;
 
@@ -23,7 +23,8 @@ p{
 #form-titulo{
     font-family: Raleway;
     color: #F8F9FA;
-
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #707070;
 }
 
 #cnpj{
