--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -1,73 +1,61 @@
 <div class="container-fluid">
 
-  <div class="row">
+  <div class="row d-flex align-items-center">
 
     <div class="col-md-5 mt-4 mb-5 ml-4">
 
-      <h1 class="text-center" id="titulo">Cadastro</h1>
 
       <div class="row d-flex justify-content-center">
-        <div class="col-md-9  cor-fundo">
+
+        <div class="col-md-9  cor-fundo shadow">
+          <h1 class="text-center mt-5" id="titulo">Cadastro</h1>
 
           <div class="form-group mt-3 cor-fonte">
             <label for="nome">Nome</label>
-            <input class="form-control" type="text"
-            name="nome" id="nome"
-            placeholder="Seu nome">
+            <input class="form-control" type="text" name="nome" id="nome" placeholder="Seu nome">
           </div>
 
           <div class="form-group cor-fonte">
             <label for="cnpj">CNPJ</label>
-            <input class="form-control" type="text"
-            name="cnpj" id="cnpj"
-            placeholder="00.000.000/0000-00">
+            <input class="form-control" type="text" name="cnpj" id="cnpj" placeholder="00.000.000/0000-00">
           </div>
 
           <div class="form-group cor-fonte">
             <label for="usuario">Usuário</label>
-            <input class="form-control" type="text"
-            name="usuario" id="usuario"
-            placeholder="Seu usuário">
+            <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário">
           </div>
 
           <div class="form-group cor-fonte">
             <label for="foto">Link da Foto</label>
-            <input class="form-control" type="text"
-            name="foto" id="foto"
-            placeholder="Link da sua foto">
+            <input class="form-control" type="text" name="foto" id="foto" placeholder="Link da sua foto">
           </div>
 
           <div class="form-group cor-fonte">
             <label for="email">Email</label>
-            <input class="form-control" type="email"
-            name="email" id="email"
-            placeholder="email@exemplo.com">
+            <input class="form-control" type="email" name="email" id="email" placeholder="email@exemplo.com">
           </div>
 
           <div class="form-group cor-fonte">
             <label for="senha">Senha</label>
-            <input class="form-control" type="password"
-            name="senha" id="senha"
-            placeholder="Sua senha">
+            <input class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
           </div>
 
           <div class="form-group cor-fonte">
             <label for="confirmaSenha">Confirmar Senha</label>
-            <input class="form-control" type="password"
-            name="confirmaSenha" id="confirmaSenha"
-            placeholder="Confirme sua senha">
+            <input class="form-control" type="password" name="confirmaSenha" id="confirmaSenha"
+              placeholder="Confirme sua senha">
           </div>
 
           <div class="form-group cor-fonte">
             <label for="tipo">Tipo de Usuário</label>
-            <select  class="form-control" name="tipo" id="tipo">
+            <select class="form-control" name="tipo" id="tipo">
               <option>Selecione um tipo de usuário</option>
               <option value="normal">Normal</option>
               <option value="adm">Administrador</option>
             </select>
           </div>
 
-          <div class="d-flex justify-content-center mb-3">
+          <div class="d-flex justify-content-center mb-5">
             <button type="submit" class="btn btn-danger mr-3 cor-fonte sombra-botao">Cancelar</button>
             <button type="submit" class="btn btn-success cor-fonte sombra-botao">Cadastrar</button>
           </div>
@@ -80,4 +68,3 @@
 
   </div>
 </div>
-
