--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -56,7 +56,7 @@
           </div>
 
           <div class="d-flex justify-content-center mb-5">
-            <button type="submit" class="btn btn-danger mr-3 cor-fonte sombra-botao">Cancelar</button>
+            <button type="submit" class="btn btn-danger mr-3 cor-fonte sombra-botao" routerLink='/entrar'>Cancelar</button>
             <button type="submit" class="btn btn-success cor-fonte sombra-botao">Cadastrar</button>
           </div>
 
