--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -4,13 +4,13 @@
 
         <div class="col-md-6">
 
-          
+
             <div class="container shadow" style="max-width: 40rem" id="form-box">
 
                 <div class="row d-flex justify-content-center">
-                 
+
                     <div class="col-md-6">
-                        <h1 class="text-center font-weight-bold mt-5" id="form-titulo">Entrar</h1> 
+                        <h1 class="text-center font-weight-bold mt-5" id="form-titulo">Entrar</h1>
                         <div class="form-group">
                             <label for="cnpj" id="cnpj" class="font-weight-bold">Login</label>
                             <input class="form-control" type="text" name="cnpj" id="cnpj" placeholder="Digite seu CNPJ">
@@ -31,7 +31,7 @@
 
                         <hr class="mt-5 mb-5">
 
-                        <p class="text-center mb-5">É sua primeira vez aqui?<a href=""> Cadastre-se.</a></p>
+                        <p class="text-center mb-5">É sua primeira vez aqui?<a routerLink='/cadastrar'>Cadastre-se.</a></p>
 
                     </div>
                 </div>
