--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -12,10 +12,10 @@
                     <div class="col-md-6">
                         <h1 class="text-center font-weight-bold mt-5" id="form-titulo">Entrar</h1>
                         <div class="form-group">
-                            <label for="cnpj" id="cnpj" class="font-weight-bold">Login</label>
-                            <input class="form-control" type="text" name="cnpj" id="cnpj" placeholder="Digite seu CNPJ">
+                            <label for="usuario" id="usuario" class="font-weight-bold">Login</label>
+                            <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Digite seu usuário">
                             <div>
-                                <p id="info-cnpj">Seu CNPJ não será compartilhado.</p>
+                                <p id="info-cnpj">Seus dados não seram compartilhados.</p>
                             </div>
                         </div>
 
