Método Cadastrar criado no TS  & incorporado no HTML

--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -12,35 +12,35 @@
 
           <div class="form-group mt-3 cor-fonte">
             <label for="nome">Nome</label>
-            <input class="form-control" type="text" name="nome" id="nome" placeholder="Seu nome">
+            <input [(ngModel)]='user.nome' class="form-control" type="text" name="nome" id="nome" placeholder="Seu nome">
           </div>
 
-          <div class="form-group cor-fonte">
+          <div [(ngModel)]='user.cnpj' class="form-group cor-fonte">
             <label for="cnpj">CNPJ</label>
             <input class="form-control" type="text" name="cnpj" id="cnpj" placeholder="00.000.000/0000-00">
           </div>
 
-          <div class="form-group cor-fonte">
+          <div [(ngModel)]='userLogin.usuario' class="form-group cor-fonte">
             <label for="usuario">Usuário</label>
             <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário">
           </div>
 
-          <div class="form-group cor-fonte">
+          <div [(ngModel)]='user.foto' class="form-group cor-fonte">
             <label for="foto">Link da Foto</label>
             <input class="form-control" type="text" name="foto" id="foto" placeholder="Link da sua foto">
           </div>
 
-          <div class="form-group cor-fonte">
+          <div [(ngModel)]='user.email' class="form-group cor-fonte">
             <label for="email">Email</label>
             <input class="form-control" type="email" name="email" id="email" placeholder="email@exemplo.com">
           </div>
 
           <div class="form-group cor-fonte">
             <label for="senha">Senha</label>
-            <input class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
+            <input (input)='confirmSenha($event)' class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
           </div>
 
-          <div class="form-group cor-fonte">
+          <div [(ngModel)]='user.senha' class="form-group cor-fonte">
             <label for="confirmaSenha">Confirmar Senha</label>
             <input class="form-control" type="password" name="confirmaSenha" id="confirmaSenha"
               placeholder="Confirme sua senha">
@@ -48,7 +48,7 @@
 
           <div class="form-group cor-fonte">
             <label for="tipo">Tipo de Usuário</label>
-            <select class="form-control" name="tipo" id="tipo">
+            <select class="form-control" name="tipo" id="tipo" (change)='tipoUser($event)'>
               <option>Selecione um tipo de usuário</option>
               <option value="normal">Normal</option>
               <option value="adm">Administrador</option>
@@ -57,7 +57,7 @@
 
           <div class="d-flex justify-content-center mb-5">
             <button type="submit" class="btn btn-danger mr-3 cor-fonte sombra-botao" routerLink='/entrar'>Cancelar</button>
-            <button type="submit" class="btn btn-success cor-fonte sombra-botao">Cadastrar</button>
+            <button type="submit" class="btn btn-success cor-fonte sombra-botao" (click)='cadastrar()'>Cadastrar</button>
           </div>
 
         </div>
