--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -13,7 +13,7 @@
                         <h1 class="text-center font-weight-bold mt-5" id="form-titulo">Entrar</h1>
                         <div class="form-group">
                             <label for="usuario" id="usuario" class="font-weight-bold">Login</label>
-                            <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Digite seu usuário">
+                            <input [(ngModel)]='userLogin.usuario' class="form-control" type="text" name="usuario" id="usuario" placeholder="Digite seu usuário">
                             <div>
                                 <p id="info-cnpj">Seus dados não seram compartilhados.</p>
                             </div>
@@ -21,12 +21,12 @@
 
                         <div class="form-group">
                             <label for="senha" id="senha" class="font-weight-bold">Senha</label>
-                            <input class="form-control" type="password" name="senha" id="senha"
+                            <input [(ngModel)]='userLogin.senha' class="form-control" type="password" name="senha" id="senha"
                                 placeholder="Digite sua senha">
                         </div>
 
                         <div class="d-flex justify-content-center">
-                            <button type="submit" class="btn btn-success btn-lg shadow-sm mt-1" id='entrar'>Entrar</button>
+                            <button type="submit" class="btn btn-success btn-lg shadow-sm mt-1" (click)='entrar()' id='entrar'>Entrar</button>
                         </div>
 
                         <hr class="mt-5 mb-5">
