--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -15,24 +15,24 @@
             <input [(ngModel)]='user.nome' class="form-control" type="text" name="nome" id="nome" placeholder="Seu nome">
           </div>
 
-          <div [(ngModel)]='user.cnpj' class="form-group cor-fonte">
+          <div  class="form-group cor-fonte">
             <label for="cnpj">CNPJ</label>
-            <input class="form-control" type="text" name="cnpj" id="cnpj" placeholder="00.000.000/0000-00">
+            <input [(ngModel)]='user.cnpj' class="form-control" type="text" name="cnpj" id="cnpj" placeholder="00.000.000/0000-00">
           </div>
 
-          <div [(ngModel)]='userLogin.usuario' class="form-group cor-fonte">
+          <div  class="form-group cor-fonte">
             <label for="usuario">Usuário</label>
-            <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário">
+            <input [(ngModel)]='user.usuario' class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário">
           </div>
 
-          <div [(ngModel)]='user.foto' class="form-group cor-fonte">
+          <div  class="form-group cor-fonte">
             <label for="foto">Link da Foto</label>
-            <input class="form-control" type="text" name="foto" id="foto" placeholder="Link da sua foto">
+            <input [(ngModel)]='user.foto' class="form-control" type="text" name="foto" id="foto" placeholder="Link da sua foto">
           </div>
 
-          <div [(ngModel)]='user.email' class="form-group cor-fonte">
+          <div  class="form-group cor-fonte">
             <label for="email">Email</label>
-            <input class="form-control" type="email" name="email" id="email" placeholder="email@exemplo.com">
+            <input [(ngModel)]='user.email' class="form-control" type="email" name="email" id="email" placeholder="email@exemplo.com">
           </div>
 
           <div class="form-group cor-fonte">
@@ -40,9 +40,9 @@
             <input (input)='confirmSenha($event)' class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
           </div>
 
-          <div [(ngModel)]='user.senha' class="form-group cor-fonte">
+          <div  class="form-group cor-fonte">
             <label for="confirmaSenha">Confirmar Senha</label>
-            <input class="form-control" type="password" name="confirmaSenha" id="confirmaSenha"
+            <input [(ngModel)]='user.senha' class="form-control" type="password" name="confirmaSenha" id="confirmaSenha"
               placeholder="Confirme sua senha">
           </div>
 
