--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -17,7 +17,7 @@
 
           <div  class="form-group cor-fonte">
             <label for="cnpj">CNPJ</label>
-            <input [(ngModel)]='user.cnpj' class="form-control" type="text" name="cnpj" id="cnpj" placeholder="00.000.000/0000-00">
+            <input [(ngModel)]='user.cnpj' class="form-control" type="text" name="cnpj" id="cnpj" placeholder="Digite apenas os 14 numeros do CNPJ">
           </div>
 
           <div  class="form-group cor-fonte">
