--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -9,29 +9,32 @@
 
                 <div class="row d-flex justify-content-center">
 
-                    <div class="col-md-6">
+                    <div class="col-md-6 text-white">
                         <h1 class="text-center font-weight-bold mt-5" id="form-titulo">Entrar</h1>
                         <div class="form-group">
-                            <label for="usuario" id="usuario" class="font-weight-bold">Login</label>
-                            <input [(ngModel)]='userLogin.usuario' class="form-control" type="text" name="usuario" id="usuario" placeholder="Digite seu usuário">
+                            <label for="usuario" id="usuario" class="font-weight-bold text-white">Login</label>
+                            <input [(ngModel)]='userLogin.usuario' class="form-control" type="text" name="usuario"
+                                id="usuario" placeholder="Digite seu usuário">
                             <div>
                                 <p id="info-cnpj">Seus dados não seram compartilhados.</p>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label for="senha" id="senha" class="font-weight-bold">Senha</label>
-                            <input [(ngModel)]='userLogin.senha' class="form-control" type="password" name="senha" id="senha"
-                                placeholder="Digite sua senha">
+                            <label class="font-weight-bold" for="senha">Senha</label>
+                            <input [(ngModel)]='userLogin.senha' class="form-control " type="password"
+                                name="senha" id="senha" placeholder="Sua senha">
                         </div>
 
                         <div class="d-flex justify-content-center">
-                            <button type="submit" class="btn btn-success btn-lg shadow-sm mt-1" (click)='entrar()' id='entrar'>Entrar</button>
+                            <button type="submit" class="btn btn-success btn-lg shadow-sm mt-1" (click)='entrar()'
+                                id='entrar'>Entrar</button>
                         </div>
 
                         <hr class="mt-5 mb-5">
 
-                        <p class="text-center mb-5">É sua primeira vez aqui?<a routerLink='/cadastrar'>Cadastre-se.</a></p>
+                        <p class="text-center mb-5">É sua primeira vez aqui?<a routerLink='/cadastrar'>Cadastre-se.</a>
+                        </p>
 
                     </div>
                 </div>
