Bem vindo e imagem

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,1 +1,23 @@
-<p>inicio works!</p>
+<div class="container-fluid">
+    
+  <div class="row bg-info d-flex align-items-center ">
+    <div class="col-md-6">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-6 text-white">
+              <h1 class="fs-50"> Seja bem vindo(a)! </h1>
+              <h5 class="fs-18"> Contribua com o seu melhor</h5>
+        </div>
+      </div>
+      <div class="row d-flex justify-content-center mt-3 mb-5">
+            <div class="col-md-6">
+                  <button class="btn btn-light mr-2" data-toggle="modal" data-target="#novaPostagem">Nova Postagem</button>
+                  <a  class="btn btn-outline-light" href="#postagens">Ver Postagens</a>
+            </div>
+      </div>
+    </div>
+    <div class="col-md-6 d-flex justify-content-center">
+      <img src="../../assets/img/Charity-rafiki.png" alt="" width="550px" height="550px" >
+    </div>
+  </div>
+</div>
+
