--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -12,37 +12,43 @@
 
           <div class="form-group mt-3 cor-fonte">
             <label for="nome">Nome</label>
-            <input [(ngModel)]='user.nome' class="form-control" type="text" name="nome" id="nome" placeholder="Seu nome">
+            <input [(ngModel)]='user.nome' class="form-control" type="text" name="nome" id="nome"
+              placeholder="Seu nome">
           </div>
 
-          <div  class="form-group cor-fonte">
+          <div class="form-group cor-fonte">
             <label for="cnpj">CNPJ</label>
-            <input [(ngModel)]='user.cnpj' class="form-control" type="text" name="cnpj" id="cnpj" placeholder=" digite o CNPJ (00.000.000/0000-00)">
+            <input [(ngModel)]='user.cnpj' class="form-control" type="text" name="cnpj" id="cnpj"
+              placeholder=" digite o CNPJ (00.000.000/0000-00)">
           </div>
 
-          <div  class="form-group cor-fonte">
+          <div class="form-group cor-fonte">
             <label for="usuario">Usuário</label>
-            <input [(ngModel)]='user.usuario' class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário">
+            <input [(ngModel)]='user.usuario' class="form-control" type="text" name="usuario" id="usuario"
+              placeholder="Seu usuário">
           </div>
 
-          <div  class="form-group cor-fonte">
+          <div class="form-group cor-fonte">
             <label for="foto">Link da Foto</label>
-            <input [(ngModel)]='user.foto' class="form-control" type="text" name="foto" id="foto" placeholder="Link da sua foto">
+            <input [(ngModel)]='user.foto' class="form-control" type="text" name="foto" id="foto"
+              placeholder="Link da sua foto">
           </div>
 
-          <div  class="form-group cor-fonte">
+          <div class="form-group cor-fonte">
             <label for="email">Email</label>
-            <input [(ngModel)]='user.email' class="form-control" type="email" name="email" id="email" placeholder="email@exemplo.com">
+            <input [(ngModel)]='user.email' class="form-control" type="email" name="email" id="email"
+              placeholder="email@exemplo.com">
           </div>
 
           <div class="form-group cor-fonte">
             <label for="senha">Senha</label>
-            <input (input)='confirmSenha($event)' class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
+            <input (input)='confirmSenha($event)' class="form-control" type="password" name="senha" id="senha"
+              placeholder="Sua senha">
           </div>
 
-          <div  class="form-group cor-fonte">
-            <label for="confirmaSenha">Confirmar Senha</label>
-            <input [(ngModel)]='user.senha' class="form-control" type="password" name="confirmaSenha" id="confirmaSenha"
+          <div class="form-group cor-fonte">
+            <label for="confirmSenha">Confirmar Senha</label>
+            <input [(ngModel)]='user.senha' class="form-control" type="password" name="confirmSenha" id="confirmSenha"
               placeholder="Confirme sua senha">
           </div>
 
@@ -56,8 +62,10 @@
           </div>
 
           <div class="d-flex justify-content-center mb-5">
-            <button type="submit" class="btn btn-danger mr-3 cor-fonte sombra-botao" routerLink='/entrar'>Cancelar</button>
-  <button type="submit" class="btn btn-success cor-fonte sombra-botao" (click)='cadastrar()'>Cadastrar</button>
+            <button type="submit" class="btn btn-danger mr-3 cor-fonte sombra-botao"
+              routerLink='/entrar'>Cancelar</button>
+            <button type="submit" class="btn btn-success cor-fonte sombra-botao"
+              (click)='cadastrar()'>Cadastrar</button>
           </div>
 
         </div>
