--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -16,7 +16,7 @@
                             <input [(ngModel)]='userLogin.usuario' class="form-control" type="text" name="usuario"
                                 id="usuario" placeholder="Digite seu usuário">
                             <div>
-                                <p id="info-cnpj">Seus dados não seram compartilhados.</p>
+                                <p id="info-cnpj">Seus dados não serão compartilhados.</p>
                             </div>
                         </div>
 
