--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -15,11 +15,11 @@
             <div class="row d-flex justify-content-center mt-4 mb-5">
                 <div class="col-md-3">
                     <div class="form-group">
-                        <input type="text" class="form-control" id="descricao" placeholder="Digite um novo tema">
+                        <input [(ngModel)]='tema.palavraChave' type="text" class="form-control" id="descricao" placeholder="Digite um novo tema">
                     </div>
 
                     <div class="d-flex justify-content-center">
-                        <button class="btn btn-light">Cadastrar</button>
+                        <button class="btn btn-light" (click)='cadastrarTema()' >Cadastrar</button>
                     </div>
 
                 </div>
