--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -15,7 +15,7 @@
             <div class="row d-flex justify-content-center mt-4 mb-5">
                 <div class="col-md-3">
                     <div class="form-group">
-                        <input [(ngModel)]='tema.palavraChave' type="text" class="form-control" id="descricao" placeholder="Digite um novo tema">
+                        <input [(ngModel)]='tema.descricao' type="text" class="form-control" id="descricao" placeholder="Digite a descrição do novo tema">
                     </div>
 
                     <div class="d-flex justify-content-center">
@@ -44,31 +44,23 @@
 
             <table class="table table-hover">
                 <thead>
+
                   <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Primeiro</th>
-                    <th scope="col">Último</th>
-                    <th scope="col">Nickname</th>
+                    <th scope="col">Descrição</th>
+                    <th scope="col" class="text-right">Modificações</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
+                  <tr *ngFor='let tema of listaTemas'>
+                    <th>{{tema.id}}</th>
+                    <td>{{tema.descricao}}</td>
+                    <td class="d-flex justify-content-end">
+                      <button class="btn btn-info mr-3">Editar</button>
+                      <button class="btn btn-danger">Apagar</button>
+                    </td>
                   </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>@twitter</td>
-                  </tr>
+        
                 </tbody>
               </table>
 
