--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -4,7 +4,7 @@
 
 
             <a routerLink='/inicio' class="text-white text-left">
-            
+
                 <i class="fa fa-angle-double-left" aria-hidden="true"></i> Início
 
             </a>
@@ -52,15 +52,15 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor='let tema of listaTemas'>
-                    <th>{{tema.id}}</th>
-                    <td>{{tema.descricao}}</td>
+                  <tr *ngFor='let item of listaTemas'>
+                    <th>{{item.id}}</th>
+                    <td>{{item.descricao}}</td>
                     <td class="d-flex justify-content-end">
-                      <button class="btn btn-info mr-3">Editar</button>
-                      <button class="btn btn-danger">Apagar</button>
+                      <button class="btn btn-info mr-3" [routerLink]="['/tema-edit', item.id]">Editar</button>
+                      <button class="btn btn-danger" [routerLink]="['/tema-delete', item.id]">Apagar</button>
                     </td>
                   </tr>
-        
+
                 </tbody>
               </table>
 
