--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -12,7 +12,9 @@
         <div class="col-md-6">
           <button class="btn btn-light mr-2" data-toggle="modal" data-target="#novaPostagem" data-toggle="modal"
             data-target="#novaPostagem">Nova Postagem</button>
-          <a class="btn btn-outline-light" href="#postagens">Ver Postagens</a>
+          <a class="btn btn-outline-light" href="#postagens">
+            Ver Postagens
+          </a>
         </div>
       </div>
     </div>
@@ -28,14 +30,19 @@
     <div class="nav nav-tabs d-flex justify-content-center" id="nav-tab" role="tablist">
 
       <a class="nav-item nav-link active text-secondary font-weight-bold" id="nav-todasPostagens-tab" data-toggle="tab"
-        href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens" aria-selected="true">Todas as Postagens</a>
+        href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens" aria-selected="true">
+        Todas as Postagens
+      </a>
 
       <a class="nav-item nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab"
-        href="#minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas
-        Postagens</a>
+        href="#minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">
+        Minhas Postagens
+      </a>
 
       <a class="nav-item nav-link text-secondary font-weight-bold" id="nav-postagemTema-tab" data-toggle="tab"
-        href="#postagemTema" role="tab" aria-controls="nav-postagemTema" aria-selected="false">Postagens por Tema</a>
+        href="#postagemTema" role="tab" aria-controls="nav-postagemTema" aria-selected="false">
+        Postagens por Tema
+      </a>
 
     </div>
   </nav>
@@ -76,19 +83,24 @@
       <div class="modal-body">
 
         <div class="form-group">
-          <label for="titulo">Título</label>
-          <input type="text" class="form-control" id="titulo" placeholder="Digite o título da sua postagem">
+          <label for="titulo" >Título</label>
+          <input [(ngModel)]='postagem.titulo' type="text" class="form-control" id="titulo" placeholder="Minimo de 6 caracteres">
         </div>
 
         <div class="form-group">
           <label for="texto">Texto</label>
-          <textarea class="form-control" name="texto" id="texto" rows="3"></textarea>
+          <textarea [(ngModel)]='postagem.texto' class="form-control" name="texto" id="texto"
+          rows="3" placeholder="Minimo de 20 caracteres">></textarea>
         </div>
 
         <div class="form-group">
-          <label for="tema">Escolha um tema ou <a routerLink='/tema' data-dismiss="modal">cadastre um novo</a>:</label>
-          <select class="form-control" name="tema" id="tema">
-            <option value="">Temas</option>
+          <label for="tema">Escolha um tema ou <a routerLink='/tema'
+            data-dismiss="modal">cadastre um novo</a>:</label>
+          <select class="form-control" name="tema"
+          id="tema" [(ngModel)]='idTema' (change)='findByIdTema()'>
+            <option *ngFor='let item of listaTemas' value="{{item.id}}">
+              {{item.descricao}}
+            </option>
           </select>
         </div>
 
@@ -96,8 +108,12 @@
 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-success">Publicar</button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal">
+          Cancelar
+        </button>
+        <button type="button" class="btn btn-success" (click)='publicar()' data-dismiss="modal">
+          Publicar
+        </button>
       </div>
     </div>
   </div>
