--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,3 +1,4 @@
+<!--Central-->
 <div class="container-fluid">
 
   <div class="row bg-info d-flex align-items-center ">
@@ -23,7 +24,10 @@
     </div>
   </div>
 </div>
+<!--/Central-->
 
+<!--Visualização de Postagens-->
+<!--Tabs-->
 <div class="container mb-5 mt-5" id="postagens">
 
   <nav>
@@ -34,8 +38,8 @@
         Todas as Postagens
       </a>
 
-      <a class="nav-item nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab"
-        href="#minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">
+      <a (click)='findByIdUSer()' class="nav-item nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab"
+        data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">
         Minhas Postagens
       </a>
 
@@ -46,26 +50,68 @@
 
     </div>
   </nav>
+</div>
+<!--/Tabs-->
 
-  <div class="tab-content" id="nav-tabContent">
+<!--Cards-->
+<div class="tab-content mt-5" id="myTabContent">
 
-    <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
-      Todas as Postagens
-    </div>
+  <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
 
-    <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
-      Minhas Postagens
-    </div>
-
-    <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
-      Postagens por Tema
+    <div class="card-columns">
+      <div class="card text-center" *ngFor='let item of listaPostagens'>
+        <div class="card-body">
+          <h5 class="card-title m-0">{{item.titulo}}</h5>
+          <small class="text-muted mb-3">Tema: {{item.tema.descricao}}</small>
+          <p class="card-text">{{item.texto}}.</p>
+          <p class="card-text"><small class="text-muted">{{item.dataHora}}</small></p>
+          <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
+        </div>
+      </div>
     </div>
 
   </div>
 
+  <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
+
+
+    <div class="card-columns">
+      <div class="card text-center" *ngFor='let item of user.postagem'>
+        <div class="card-body">
+          <h5 class="card-title m-0">{{item.titulo}}</h5>
+          <small class="text-muted mb-3">Tema: {{item.tema.descricao}}</small>
+          <p class="card-text">{{item.texto}}.</p>
+          <p class="card-text"><small class="text-muted">{{item.dataHora}}</small></p>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+
+  <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
+
+    <div class="card-columns" *ngFor='let tema of listaTemas'>
+      <div class="card text-center" *ngFor='let item of tema.postagem'>
+        <div class="card-body">
+          <h5 class="card-title m-0">{{item.titulo}}</h5>
+          <p class="card-text">{{item.texto}}.</p>
+          <p class="card-text"><small class="text-muted">{{item.dataHora}}</small></p>
+
+          <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+
 </div>
+<!--/Cards-->
 
 
+<!--/Tabs-->
+<!--/Visualização de Postagens-->
 
 
 
@@ -83,21 +129,20 @@
       <div class="modal-body">
 
         <div class="form-group">
-          <label for="titulo" >Título</label>
-          <input [(ngModel)]='postagem.titulo' type="text" class="form-control" id="titulo" placeholder="Minimo de 6 caracteres">
+          <label for="titulo">Título</label>
+          <input [(ngModel)]='postagem.titulo' type="text" class="form-control" id="titulo"
+            placeholder="Minimo de 6 caracteres">
         </div>
 
         <div class="form-group">
           <label for="texto">Texto</label>
-          <textarea [(ngModel)]='postagem.texto' class="form-control" name="texto" id="texto"
-          rows="3" placeholder="Minimo de 20 caracteres">></textarea>
+          <textarea [(ngModel)]='postagem.texto' class="form-control" name="texto" id="texto" rows="3"
+            placeholder="Minimo de 20 caracteres">></textarea>
         </div>
 
         <div class="form-group">
-          <label for="tema">Escolha um tema ou <a routerLink='/tema'
-            data-dismiss="modal">cadastre um novo</a>:</label>
-          <select class="form-control" name="tema"
-          id="tema" [(ngModel)]='idTema' (change)='findByIdTema()'>
+          <label for="tema">Escolha um tema ou <a routerLink='/tema' data-dismiss="modal">cadastre um novo</a>:</label>
+          <select class="form-control" name="tema" id="tema" [(ngModel)]='idTema' (change)='findByIdTema()'>
             <option *ngFor='let item of listaTemas' value="{{item.id}}">
               {{item.descricao}}
             </option>
