--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -50,59 +50,62 @@
 
     </div>
   </nav>
-</div>
-<!--/Tabs-->
 
-<!--Cards-->
-<div class="tab-content mt-5" id="myTabContent">
+  <!--/Tabs-->
 
-  <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
+  <!--Cards-->
+  <div class="tab-content mt-5" id="myTabContent">
 
-    <div class="card-columns">
-      <div class="card text-center" *ngFor='let item of listaPostagens'>
-        <div class="card-body">
-          <h5 class="card-title m-0">{{item.titulo}}</h5>
-          <small class="text-muted mb-3">Tema: {{item.tema.descricao}}</small>
-          <p class="card-text">{{item.texto}}.</p>
-          <p class="card-text"><small class="text-muted">{{item.dataHora}}</small></p>
-          <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
+    <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
+
+      <div class="card-columns">
+        <div class="card text-center" *ngFor='let item of listaPostagens'>
+          <div class="card-body">
+            <h5 class="card-title m-0">{{item.titulo}}</h5>
+            <small class="text-muted mb-3">Tema: {{item.tema.descricao}}</small>
+            <p class="card-text">{{item.texto}}.</p>
+            <p class="card-text"><small class="text-muted">{{item.dataHora}}</small></p>
+            <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
+          </div>
         </div>
       </div>
+
     </div>
 
-  </div>
+    <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
 
-  <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
+      <div class="card-columns">
+        <div class="card text-center" *ngFor='let item of user.postagem'>
+          <div class="card-body">
+            <h5 class="card-title m-0">{{item.titulo}}</h5>
+            <small class="text-muted mb-3">Tema: {{item.tema.descricao}}</small>
+            <p class="card-text">{{item.texto}}.</p>
+            <p class="card-text"><small class="text-muted">{{item.dataHora}}</small></p>
 
-
-    <div class="card-columns">
-      <div class="card text-center" *ngFor='let item of user.postagem'>
-        <div class="card-body">
-          <h5 class="card-title m-0">{{item.titulo}}</h5>
-          <small class="text-muted mb-3">Tema: {{item.tema.descricao}}</small>
-          <p class="card-text">{{item.texto}}.</p>
-          <p class="card-text"><small class="text-muted">{{item.dataHora}}</small></p>
+            <a [routerLink]="['/postagem-edit', item.id]" class="text-info mr-3" href="">Editar</a>
+            <a [routerLink]="['/postagem-delete', item.id]" class="text-danger" href="">Apagar</a>
+          </div>
         </div>
       </div>
+
     </div>
 
+    <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
 
-  </div>
+      <div class="card-columns" *ngFor='let tema of listaTemas'>
+        <div class="card text-center" *ngFor='let item of tema.postagem'>
+          <div class="card-body">
+            <h5 class="card-title m-0">{{item.titulo}}</h5>
+            <p class="card-text">{{item.texto}}.</p>
+            <p class="card-text"><small class="text-muted">{{item.dataHora}}</small></p>
 
-  <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
-
-    <div class="card-columns" *ngFor='let tema of listaTemas'>
-      <div class="card text-center" *ngFor='let item of tema.postagem'>
-        <div class="card-body">
-          <h5 class="card-title m-0">{{item.titulo}}</h5>
-          <p class="card-text">{{item.texto}}.</p>
-          <p class="card-text"><small class="text-muted">{{item.dataHora}}</small></p>
-
-          <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
+            <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
+          </div>
         </div>
       </div>
-    </div>
 
+
+    </div>
 
   </div>
 
@@ -118,6 +121,7 @@
 <!-- Modal -->
 <div class="modal fade" id="novaPostagem" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado"
   aria-hidden="true">
+
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
