--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,12 +1,10 @@
-<footer class="page-footer font-small bg-info pt-4">
-
+<footer class="page-footer font-small pt-4 mt-5 cor-fundo">
   <div class="container">
     <div class="row">
       <div class="col-md-12 d-flex justify-content-center">
         <h4 class="text-light">Siga-nos nas redes sociais</h4>
       </div>
     </div>
-
     <div class="row">
       <div class="col-md-12 d-flex justify-content-center">
           <ul class="social-network">
@@ -25,8 +23,7 @@
       </div>
     </div>
   </div>
-  
   <div class="footer-copyright  bg-dark text-center py-3">
-    <span class="text-light"> © 2021 Copyright: Grupo 1</span>
+    <span class="text-warning font-weight-bold"> © 2021 Copyright: Grupo 1</span>
   </div>
 </footer>
