--- a/src/app/entrar/entrar.component.css
+++ b/src/app/entrar/entrar.component.css
@@ -1,50 +1,46 @@
-#img-bg{
-    background-image: url(../../assets/img/imagemEntrar.png);
-
-    min-height: 950px;
-
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+::ng-deep body {
+  background-color: #7ae4cf;
 }
 
-#form-box{
-
-    background-color:#00B894;
-    border-radius: 20px;
-
+.font-tam {
+  font-size: 40px;
 }
 
-p{
-    font-family: Raleway;
-    color: #F8F9FA;
+.cor-fundo{
+  background-color: #00B894;
 }
 
-#form-titulo{
-    font-family: Raleway;
-    color: #F8F9FA;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #707070;
+div.img {
+  position: relative;
+  width: 100%;
+  height: 30%;
 }
 
-#cnpj{
-    font-family: Raleway;
-    color: #F8F9FA;
+div.img > div {
+  position: absolute;
+  left: 50%;
+  margin-left: -190px;
+  top: 6%;
 }
 
-#info-cnpj{
-
-    font-family: Raleway;
-    color:#E2E6EA;
-    font-size: small;
-
+ul.social-network{
+  list-style: none;
+  padding: 0;
 }
 
-#senha{
-    font-family: Raleway;
+ul.social-network li{
+ display: inline;
+ margin: 0;
+ padding: 5px;
 }
-
-#entrar{
-    font-family: Raleway;
-    
+.fa{
+  font-size: 35pt;
+  color: white;
+  padding: 10px;
+}
+.fa-linkedin:hover{
+    color:blue;
+}
+.fa-github-square:hover{
+  color: black;
 }
