--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -23,7 +23,7 @@
       </div>
     </div>
   </div>
-  <div class="footer-copyright  bg-dark text-center py-3">
-    <span class="text-warning font-weight-bold"> © 2021 Copyright: Grupo 1</span>
+  <div class="footer-copyright  bg-secondary text-center py-3">
+    <span class="text-white font-weight-bold"> © 2021 Copyright: Grupo 1</span>
   </div>
 </footer>
