--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -194,7 +194,7 @@
     <div class="card-body mt-5 mb-5" id="parceiro">
       <div class="row align-items-center">
         <div class="col-md-6">
-          <h3 class="text-success">Parceiro</h3>
+          <h3 class="text-success">Parceria</h3>
           <p>
             Lorem ipsum commodo tempor mollis arcu placerat curabitur ipsum sodales, senectus non orci eu at turpis
             felis
