--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -1,6 +1,6 @@
 <!--navbar-->
 <nav class="navbar navbar-expand-lg navbar-light cor-nav shadow-lg">
-  <h6 class="navbar-brand mt-2 text-white font-raleway font-italic font-weight-bold"><u>Alimenta</u></h6>
+  <img src="../../assets/img/Alimenta Logotipo (6).png" width="125px" heigth="125px" alt="">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
     aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
     <span class="navbar-toggler-icon"></span>
@@ -8,17 +8,17 @@
   <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link text-light font-weight-bold font-raleway" href="#txtvideo">Quem Somos</a>
+        <a class="nav-link text-light font-weight-bold font-menu" href="#txtvideo">Quem Somos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-light font-weight-bold font-raleway" href="#card">Missão, Visão e Valores</a>
+        <a class="nav-link text-light font-weight-bold font-menu" href="#card">Missão, Visão e Valores</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-light font-weight-bold font-raleway" href="#parceiro">Parceria</a>
+        <a class="nav-link text-light font-weight-bold font-menu" href="#parceiro">Parceria</a>
       </li>
 
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-light font-weight-bold font-raleway" href="" id="navbarDropdown"
+        <a class="nav-link dropdown-toggle text-light font-weight-bold font-menu" href="" id="navbarDropdown"
           role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Fundadores</a>
         <div class="dropdown-menu cor-fundo shadow-sm" aria-labelledby="navbarDropdown">
           <a class="dropdown-item text-light font-weight-bold" href="https://www.linkedin.com/in/henrique-uriel/"
@@ -36,13 +36,13 @@
 
     <form class="form-inline d-flex justify-content-end my-2 my-lg-0">
       <div class="form-group">
-        <label for="usuario" id="usuario" class="ml-2 font-weight-bold text-white font-raleway">Login</label>
+        <label for="usuario" id="usuario" class="ml-2 font-weight-bold text-white font-menu">Login</label>
         <input [(ngModel)]='userLogin.usuario' class="form-control ml-2 mr-3 font-raleway" type="text" name="usuario"
           id="usuario" placeholder="Digite seu usuário">
       </div>
 
       <div class="form-group ml-2">
-        <label class="font-weight-bold text-white font-raleway" for="senha">Senha</label>
+        <label class="font-weight-bold text-white font-menu" for="senha">Senha</label>
         <input [(ngModel)]='userLogin.senha' class="form-control ml-2 mr-3 font-raleway" type="password" name="senha"
           id="senha" placeholder="Sua senha">
       </div>
