--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="col-md-6 d-flex justify-content-center">
-      <img src="../../assets/img/Charity-rafiki.png" alt="" width="550px" height="550px">
+      <img src="../../assets/img/Charity-rafiki (1).png" alt="" width="550px" height="550px">
     </div>
   </div>
 </div>
@@ -57,14 +57,15 @@
   <div class="tab-content mt-5" id="myTabContent">
 
     <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
-   
-   <div class="row d-flex justify-content-center mt-5 mb-5">
-     <div class="col-md-4">
-        <div class="form-group">
-    <input type="text" class="form-control" id="titulo" placeholder="Pesquisando por um titulo de uma postagem?" [(ngModel)]="tituloPost" (keyup)='findByTituloPostagem()'>
-       </div>
-     </div>
-  </div>
+
+      <div class="row d-flex justify-content-center mt-5 mb-5">
+        <div class="col-md-4">
+          <div class="form-group">
+            <input type="text" class="form-control" id="titulo" placeholder="Pesquisando por um titulo de uma postagem?"
+              [(ngModel)]="tituloPost" (keyup)='findByTituloPostagem()'>
+          </div>
+        </div>
+      </div>
 
       <div class="card-columns">
         <div class="card text-center" *ngFor='let item of listaPostagens | orderBy : key : reverse'>
@@ -102,12 +103,13 @@
 
       <div class="row d-flex justify-content-center mt-5 mb-5">
         <div class="col-md-4">
-           <div class="form-group">
-       <input type="text" class="form-control" id="titulo" placeholder="Pesquise um tema" [(ngModel)]="nomeTema" (keyup)='findByNomeTema()'>
+          <div class="form-group">
+            <input type="text" class="form-control" id="titulo" placeholder="Pesquise um tema" [(ngModel)]="nomeTema"
+              (keyup)='findByNomeTema()'>
           </div>
         </div>
-     </div>
-   
+      </div>
+
 
       <div class="card-columns" *ngFor='let tema of listaTemas'>
         <div class="card text-center" *ngFor='let item of tema.postagem | orderBy : key : reverse'>
