--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -2,68 +2,48 @@
 
   <div class="row d-flex align-items-center">
 
-    <div class="col-md-5 mt-4 mb-5 ml-4">
+    <div class="col-md-5 ml-4 mt-4">
       <div class="row d-flex justify-content-center">
 
         <div class="col-md-9  cor-fundo shadow">
-          <h1 class="text-center mt-5" id="titulo">Cadastro</h1>
+          <h2 class="text-center font-italic font-raleway font-weight-bold" id="titulo">ALIMENTA |   Cadastro</h2>
 
-          <div class="form-group mt-3 cor-fonte">
+          <div class="form-group cor-fonte font-size">
             <label for="nome">Nome</label>
-            <input [(ngModel)]='user.nome' class="form-control" type="text" name="nome" id="nome"
+            <input [(ngModel)]='user.nome' class="form-control font-size" type="text" name="nome" id="nome"
               placeholder="Seu nome">
-          </div>
-
-          <div class="form-group cor-fonte">
             <label for="cnpj">CNPJ</label>
-            <input [(ngModel)]='user.cnpj' class="form-control" type="text" name="cnpj" id="cnpj"
+            <input [(ngModel)]='user.cnpj' class="form-control font-size" type="text" name="cnpj" id="cnpj"
               placeholder=" digite o CNPJ (00.000.000/0000-00)">
-          </div>
-
-          <div class="form-group cor-fonte">
             <label for="usuario">Usuário</label>
-            <input [(ngModel)]='user.usuario' class="form-control" type="text" name="usuario" id="usuario"
+            <input [(ngModel)]='user.usuario' class="form-control font-size" type="text" name="usuario" id="usuario"
               placeholder="Seu usuário">
-          </div>
-
-          <div class="form-group cor-fonte">
             <label for="foto">Link da Foto</label>
-            <input [(ngModel)]='user.foto' class="form-control" type="text" name="foto" id="foto"
+            <input [(ngModel)]='user.foto' class="form-control font-size" type="text" name="foto" id="foto"
               placeholder="Link da sua foto">
-          </div>
-
-          <div class="form-group cor-fonte">
             <label for="email">Email</label>
-            <input [(ngModel)]='user.email' class="form-control" type="email" name="email" id="email"
+            <input [(ngModel)]='user.email' class="form-control font-size" type="email" name="email" id="email"
               placeholder="email@exemplo.com">
-          </div>
-
-          <div class="form-group cor-fonte">
             <label for="senha">Senha</label>
-            <input (input)='confirmSenha($event)' class="form-control" type="password" name="senha" id="senha"
+            <input (input)='confirmSenha($event)' class="form-control font-size" type="password" name="senha" id="senha"
               placeholder="Sua senha">
-          </div>
-
-          <div class="form-group cor-fonte">
             <label for="confirmSenha">Confirmar Senha</label>
-            <input [(ngModel)]='user.senha' class="form-control" type="password" name="confirmSenha" id="confirmSenha"
+            <input [(ngModel)]='user.senha' class="form-control font-size" type="password" name="confirmSenha" id="confirmSenha"
               placeholder="Confirme sua senha">
-          </div>
-
-          <div class="form-group cor-fonte">
             <label for="tipo">Tipo de Usuário</label>
-            <select class="form-control" name="tipo" id="tipo" (change)='tipoUser($event)'>
+            <select class="form-control font-size" name="tipo" id="tipo" (change)='tipoUser($event)'>
               <option>Selecione um tipo de usuário</option>
               <option value="normal">Normal</option>
               <option value="adm">Administrador</option>
             </select>
-          </div>
 
-          <div class="d-flex justify-content-center mb-5">
-            <button type="submit" class="btn btn-danger mr-3 cor-fonte sombra-botao"
-              routerLink='/entrar'>Cancelar</button>
-            <button type="submit" class="btn btn-success cor-fonte sombra-botao"
-              (click)='cadastrar()'>Cadastrar</button>
+            <div class="d-flex justify-content-center mt-3">
+              <button type="submit" class="btn btn-danger mr-3 cor-fonte sombra-botao"
+                routerLink='/entrar'>Cancelar</button>
+              <button type="submit" class="btn btn-success cor-fonte sombra-botao"
+                (click)='cadastrar()'>Cadastrar</button>
+            </div>
+
           </div>
 
         </div>
