--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -21,15 +21,15 @@
         <a class="nav-link dropdown-toggle text-light font-weight-bold font-menu" href="" id="navbarDropdown"
           role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Fundadores</a>
         <div class="dropdown-menu cor-fundo shadow-sm" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item text-light font-weight-bold" href="https://www.linkedin.com/in/henrique-uriel/"
+          <a class="dropdown-item text-success font-weight-bold" href="https://www.linkedin.com/in/henrique-uriel/"
             target="_blank">Henrique Uriel</a>
-          <a class="dropdown-item text-light font-weight-bold" href="https://www.linkedin.com/in/arielpirangy/"
+          <a class="dropdown-item text-success font-weight-bold" href="https://www.linkedin.com/in/arielpirangy/"
             target="_blank">Ariel Pirangy</a>
-          <a class="dropdown-item text-light font-weight-bold" href="https://www.linkedin.com/in/anapaulasouzadias/"
+          <a class="dropdown-item text-success font-weight-bold" href="https://www.linkedin.com/in/anapaulasouzadias/"
             target="_blank">Ana Souza</a>
-          <a class="dropdown-item text-light font-weight-bold"
+          <a class="dropdown-item text-success font-weight-bold"
             href="https://www.linkedin.com/in/stefani-tosi-35b655140/" target="_blank">Stefani Tosi</a>
-          <a class="dropdown-item text-white font-weight-bold" href="" target="_blank">Talita</a>
+          <a class="dropdown-item text-success font-weight-bold" href="" target="_blank">Talita</a>
         </div>
       </li>
     </ul>
@@ -254,3 +254,4 @@
   </div>
 </footer>
 <!--/rodape-->
+
