--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -18,8 +18,8 @@ ul.social-network li{
   padding: 10px;
 }
 .fa-linkedin:hover{
-    color:blue;
+  color:#00a8ff;
 }
 .fa-github-square:hover{
-  color: black;
+color: #2f3640;
 }
